--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "node": ">=16"
   },
   "scripts": {
+    "postinstall": "patch-package",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -26,6 +27,7 @@
   },
   "dependencies": {
     "@fisch0920/use-dark-mode": "^2.4.0",
+    "@giscus/react": "^1.3.0",
     "@keyvhq/core": "^1.6.9",
     "@keyvhq/redis": "^1.6.10",
     "@react-icons/all-files": "^4.1.0",
@@ -43,6 +45,7 @@
     "notion-utils": "^6.15.6",
     "p-map": "^5.3.0",
     "p-memoize": "^6.0.1",
+    "patch-package": "^8.0.0",
     "posthog-js": "^1.20.2",
     "react": "^18.2.0",
     "react-body-classname": "^1.3.1",
@@ -50,8 +53,7 @@
     "react-notion-x": "^6.15.6",
     "react-tweet-embed": "^2.0.0",
     "react-use": "^17.3.2",
-    "rss": "^1.2.2",
-    "@giscus/react": "^1.3.0"
+    "rss": "^1.2.2"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^12.3.1",
